--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "dmn/exception",
+    "name": "dmn/laravel-exception",
     "autoload": {
         "psr-4": {
             "Dmn\\Exceptions\\": "src/"
         }
     },
+    "description": "Exceptions for Larave 10+",
     "authors": [
         {
             "name": "dc",
@@ -18,6 +19,13 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Dmn\\Exceptions\\ServiceProvider"
+            ]
         }
     }
 }
