Add license to composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
             "Dmn\\Exceptions\\": "src/"
         }
     },
+    "license": "MIT",
     "description": "Exceptions for Larave 10+",
     "authors": [
         {
